--- a/Slife/Slife/app/src/main/res/layout/content_library.xml
+++ b/Slife/Slife/app/src/main/res/layout/content_library.xml
@@ -13,6 +13,7 @@
     tools:showIn="@layout/app_bar_library">
 
     <TextView
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
