--- a/Slife/Slife/app/src/main/res/menu/activity_library_drawer.xml
+++ b/Slife/Slife/app/src/main/res/menu/activity_library_drawer.xml
@@ -12,7 +12,7 @@
             android:title="People" />
         <item
             android:id="@+id/nav_trending"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_trending"
             android:title="Trending" />
         <item
             android:id="@+id/nav_settings"
