--- a/Slife/Slife/app/src/main/res/layout/app_bar_library.xml
+++ b/Slife/Slife/app/src/main/res/layout/app_bar_library.xml
@@ -47,4 +47,6 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email" />
 
+    <!--TODO: Convert FAb to play/pause button! -->
+
 </android.support.design.widget.CoordinatorLayout>
