--- a/Slife/Slife/app/src/main/res/layout/fragment_song.xml
+++ b/Slife/Slife/app/src/main/res/layout/fragment_song.xml
@@ -1,20 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:background="@color/darkGrey">
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:orientation="horizontal">
+        <TextView
+            android:textColor="@android:color/white"
+            android:id="@+id/id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:text="1"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        <TextView
+            android:layout_toRightOf="@id/id"
+            android:textColor="@android:color/white"
+            android:id="@+id/song_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginRight="@dimen/text_margin"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="@dimen/text_margin"
+            android:text="The Thrill (Porter Robinson Remix)"
+            android:textAppearance="?attr/textAppearanceListItem" />
+
+        <TextView
+            android:layout_toRightOf="@id/id"
+            android:layout_below="@id/song_title"
+            android:textColor="@android:color/white"
+            android:id="@+id/song_artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/song_title"
+            android:textSize="12sp"
+            android:layout_marginBottom="@dimen/text_margin"
+            android:text="Nero"
+            android:textAppearance="?attr/textAppearanceListItem" />
+
+        <TextView
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/song_time"
+            android:layout_gravity="center|right"
+            android:text="5:49"
+            android:textColor="@android:color/white"/>
+
+        <View
+            android:layout_alignLeft="@id/id"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignRight="@id/song_time"
+            android:layout_below="@id/song_artist"
+            android:background="@color/colorPrimary"/>
+    </RelativeLayout>
+
+
 </LinearLayout>
