--- a/Slife/Slife/app/src/main/res/layout/fragment_song_list.xml
+++ b/Slife/Slife/app/src/main/res/layout/fragment_song_list.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:background="@color/darkGrey"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.example.akshaypall.slife.SongFragment"
     tools:listitem="@layout/fragment_song" />
