--- a/Slife/Slife/app/src/main/res/layout/app_bar_library.xml
+++ b/Slife/Slife/app/src/main/res/layout/app_bar_library.xml
@@ -39,13 +39,26 @@
 
     </android.support.v4.view.ViewPager>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+    <RelativeLayout
+        android:background="@android:color/white"
+        android:id="@+id/library_media_bottomsheet"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/library_player_backsheet_length">
+            <ImageButton
+                android:id="@+id/library_play_pause_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ic_song_play" />
+
+            <View
+                android:layout_alignBottom="@id/library_play_pause_fab"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"/>
+    </RelativeLayout>
 
     <!--TODO: Convert FAb to play/pause button! -->
 
