--- a/Slife/Slife/app/src/main/res/values/dimens.xml
+++ b/Slife/Slife/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="song_text_right_margin">56dp</dimen>
+    <dimen name="library_player_backsheet_length">500dp</dimen>
+    <dimen name="library_player_backsheet_minimized_coloured_length">42dp</dimen>
 </resources>
