--- a/Slife/Slife/app/src/main/res/layout/activity_library.xml
+++ b/Slife/Slife/app/src/main/res/layout/activity_library.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.flipboard.bottomsheet.BottomSheetLayout
+    android:id="@+id/bottomsheet"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    xmlns:tools="http://schemas.android.com/tools">
+<android.support.v4.widget.DrawerLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/drawer_layout"
     tools:openDrawer="start">
 
     <include
@@ -23,3 +28,4 @@
         app:menu="@menu/activity_library_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
+</com.flipboard.bottomsheet.BottomSheetLayout>
