--- a/Slife/Slife/app/src/main/res/layout/app_bar_library.xml
+++ b/Slife/Slife/app/src/main/res/layout/app_bar_library.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/library_viewpager"
+        android:layout_marginBottom="@dimen/media_player_bottomsheet_collapsed_height"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v4.view.ViewPager>
